# cmake-giflib-r10

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gif_load.cpp
app/src/main/java/com/kalu/gif/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
lib_gif/: build.gradle
lib_gif/src/main/: AndroidManifest.xml
lib_gif/src/main/cpp/: CMakeLists.txt  GifJni.cpp
lib_gif/src/main/java/lib/kalu/gif/: GifManager.java
